@@ -158,7 +158,9 @@ module Cucumber
           row.map do |cell|
             cell_with_replaced_args = cell
             arguments.each do |name, value|
-              cell_with_replaced_args = value && cell_with_replaced_args ? cell_with_replaced_args.gsub(name, value) : nil
+              if cell_with_replaced_args && cell_with_replaced_args.include?(name)
+                cell_with_replaced_args = value ? cell_with_replaced_args.gsub(name, value) : nil
+              end
             end
             cell_with_replaced_args
           end
